<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:keep="@layout/search_bar_layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <com.google.android.material.search.SearchBar
            android:id="@+id/search_bar"
            style="@style/Widget.Material3.SearchBar.Outlined"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/search"
            app:layout_constraintEnd_toStartOf="@+id/img_fav"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/img_setting"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:background="@color/transparent"
            android:contentDescription="@string/img_setting"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_setting"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_fav"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
            android:id="@+id/img_fav"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/transparent"
            android:contentDescription="@string/img_fav"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_favorite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/img_setting"
            app:layout_constraintStart_toEndOf="@+id/search_bar"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>